2008-11-11  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/index.pot,
	  include/languages/es.mo: Updated Spanish translation and template.

2008-11-10  Sancho Lerena <slerena@artica.es>

	* operation/incidents/incident.php
	operation/incidents/incident_detail.php: Fixed some bugs in
	incident management that makes unusable the incident sytem
	Thanks to Esben for reporting this bug that was introduced
	only few days before closing 2.0 version :( 

        * include/funcions_db.php: Reference to inexistant table
        tagent_data_image has been deleted and fixed notice.

	* install.php: Fixed default var for homeurl.

2008-11-08  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/reporting_builder.php: Fixed a notice using
	get_db_value() which was replaced by get_db_sql().

	* include/functions_reporting.php: Fixed an error on
	get_fired_alerts_reporting_table() since id_alert field in
	talerta_agente_modulo is not reliable.

2008-11-08  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/reporting_builder.php: Fixed value of 1 week
	period.

	* include/functions.php: Moved all human_time_* functionallity to
	human_time_description_raw().

	* include/functions_reporting.php: Fixed a bug in SLA calculation that
	affects small periods of time (less than 24 hours) due to data
	compression in the database.

	* operation/reporting/reporting_viewer.php: Style correction.

2008-11-07  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Style corrections ins give_acl(). Show
	nothing on sql_error_handler based on error_reporting() level.

	* ChangeLog: Fixed my previous commit date.

2008-11-06  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* operation/snmpconsole/snmp_View.php: Added a span with title over the
	time comp since some people want to know what time something went down.
	This should maybe be moved into a print_ function

	* operation/agentes/estado_generalagente.php: ACL check and style