@@ -1,12 +1,11 @@
 <?PHP
 
-if (enterprise_include ("godmode/agentes/agent_disk_conf_editor.php"))
-	return;
-
-echo "<h3>This feature is not included on OpenSource version. Please visit our website to learn more about the advanced features of <a href='http://pandorafms.com'>Pandora FMS Enterprise edition</a></h3>";
-// Footer
-echo "</div><div id='foot'>";
-include ("general/footer.php");
-echo "</div>";
+if (enterprise_include ("godmode/agentes/agent_disk_conf_editor.php") === ENTERPRISE_NOT_HOOK) {
+	echo "<h3>This feature is not included on OpenSource version. Please visit our website to learn more about the advanced features of <a href='http://pandorafms.com'>Pandora FMS Enterprise edition</a></h3>";
+	// Footer
+	echo "</div><div id='foot'>";
+	include ("general/footer.php");
+	echo "</div>";
+}
 
 ?>
